--- a/public/views/pages/contactUs.ejs
+++ b/public/views/pages/contactUs.ejs
@@ -65,7 +65,7 @@
 			
 			<h1>Contact Us</h1>
 			<div id="form">
-				<form action="mailto:ruhee.rajwani@gmail.com" method="POST" enctype="multipart/form-data" name="EmailTestForm">
+				<form action="/contactUsSubmit" method="POST">
 					<label for="fname">First Name*</label>
 					<input type="text" id="fname" name="firstname" placeholder="Your name.." required>
 					<label for="lname">Last Name*</label>
@@ -81,7 +81,7 @@
 					<textarea rows="4" cols="50" id="message" name="message" placeholder="Your message..." required></textarea>
 					<div class="formButton">
 						<input type="reset" value="Reset">
-						<input type="submit" value="Send email">
+						<input type="submit" value="Submit">
 					</div>
 				</form>
 			</div>
