Added vacation to Maine and edited images

--- a/public/views/pages/asif.ejs
+++ b/public/views/pages/asif.ejs
@@ -5,11 +5,11 @@
 			<% include ../partials/menu %>
 <h1>Asif</h1>
 <img src= "images/asif.jpg" alt = "Asif">
-<p> I am the responsbile one, dealing with wife and two kids. I was born in karachi, pakistan.
- I attended Sultan Mohammed Shah Aga Khan school and then graduated from NED university studying 
+<p> I am the responsbile one, dealing with wife and two kids. I was born in Karachi, Pakistan.
+ I attended Sultan Mohammed Shah Aga Khan School and then graduated from NED University studying 
  Computer Science. I came to US and finsih my graduate studies in Computer Science from University of 
- illinois. I have lived in Chicago IL, Stroudsburg PA, Edison NJ and Somerset NJ. I like to play tennis and t
- ry to play atleast once a week. I am beginer skier and try to get out few times a year. I would love to 
- increase the time I spend on voluntary service.</p>
+ Illinois. I have lived in Chicago IL, Stroudsburg PA, Edison NJ and Somerset NJ. I like to play tennis and try 
+ to play at least once a week. I am a beginner skier and try to get out few times a year. I would love to devote
+ more of my time to volunteering and helping others.</p>
  
  <% include ../partials/footer %>
