--- a/public/views/pages/contactUs.ejs
+++ b/public/views/pages/contactUs.ejs
@@ -54,12 +54,14 @@
 		.formButton {
 			text-align: right;
 		}
+		
 	</style>
+
+
+	
 </head>
 
-<body>
-
-
+<% include ../partials/header %>
 	<div id="content">
 			<% include ../partials/menu %>
 			
