--- a/public/views/pages/vacation.ejs
+++ b/public/views/pages/vacation.ejs
@@ -8,6 +8,19 @@
 		<p>The Rajwani's try to go on at least one family trip year. Some
 			years it's simple and small and some years we go all out. Our
 			vacations always include some hiccups, laughter and happy memories.</p>
+			<h2>Maine</h2>
+			<img class=thumbnail src="images/maine1.jpg" alt="Maine"> <img
+			class=thumbnail src="images/maine2.jpg" alt="Maine"> <img
+			class=thumbnail src="images/maine3.jpg" alt="Maine"> <img
+			class=thumbnail src="images/maine4.jpg" alt="Maine">
+			<p>At this point in time Ahil was a working man. 
+				His summer job started in June and we needed to go on at least one trip this summer. 
+				We needed something short but something that would also create lots of fun memories. 
+				Acadia National Park was perfect. We saw beautiful sunrises, hiked beaches and mountains, 
+				encountered some wonderful overlooks and, ate some amazing seafood and ice cream. 
+				I did not think this trip would be very fun, but now I can never forget the wonderful time I had 
+				in Maine. </p>
+
 		<h2>Italy</h2>
 		<img class=thumbnail src="images/italy1.jpg" alt="Italy"> <img
 			class=thumbnail src="images/italy2.jpg" alt="Italy"> <img
